# CrispASR

./: .env.example  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  HANDOFF-wrapper-sweep.md  HISTORY.md  LEARNINGS.md  Makefile  PERFORMANCE.md  PLAN.md  README.md  RENAMING.md  TODO.md  TODO_COHERE_OPTIMIZATION.md  UPSTREAM.md  build-android.sh  build-windows.bat  canary-todo.md  docker-compose.yml  ggml_plans.md  granite-todo.md  optimize.md  parakeet-todo.md  qwen3-asr-benchmark.md  qwen3-asr-todo.md  voxtral-4b-todo.md  voxtral-comparison.md  voxtral-todo.md
.claude/: settings.local.json
.devops/: main-cuda-12.Dockerfile  main-cuda.Dockerfile  main-intel.Dockerfile  main-musa.Dockerfile  main-vulkan.Dockerfile  main.Dockerfile  run-server.sh
crisp_audio/: CMakeLists.txt
crisp_audio/include/: crisp_audio.h
crisp_audio/src/: audio_tower.cpp
crispasr/: Cargo.toml  README.md
crispasr-sys/: Cargo.toml  README.md  build.rs
crispasr-sys/src/: lib.rs
crispasr/src/: lib.rs
crispasr/tests/: integration.rs
docs/: bindings.md  cli.md  contributing.md  streaming.md  tts.md
examples/: CMakeLists.txt  common-whisper.cpp  generate-karaoke.sh  livestream.sh  twitch.sh  yt-wsp.sh
examples/canary-align/: CMakeLists.txt  main.cpp
examples/canary-main/: CMakeLists.txt  main.cpp
examples/cli/: CMakeLists.txt  cli.cpp  crispasr_aligner.cpp  crispasr_backend.cpp  crispasr_backend.h  crispasr_backend_canary.cpp  crispasr_backend_cohere.cpp  crispasr_backend_f5_tts.cpp  crispasr_backend_fastconformer_ctc.cpp  crispasr_backend_gemma4_e2b.cpp  crispasr_backend_granite.cpp  crispasr_backend_kyutai_stt.cpp  crispasr_backend_mimo_asr.cpp  crispasr_backend_moonshine.cpp  crispasr_backend_omniasr.cpp  crispasr_backend_paraformer.cpp  crispasr_backend_parakeet.cpp  crispasr_backend_qwen3.cpp  crispasr_backend_qwen3_tts.cpp  crispasr_backend_vibevoice.cpp  crispasr_backend_voxtral.cpp  crispasr_backend_voxtral4b.cpp  crispasr_backend_whisper.cpp  crispasr_diagnostics.cpp  crispasr_diagnostics.h  crispasr_diarize.cpp  crispasr_diarize_cli.cpp  crispasr_diarize_cli.h  crispasr_diff.cpp  crispasr_diff.h  crispasr_diff_main.cpp  crispasr_lid.cpp  crispasr_llm_pipeline.h  crispasr_mem.h  crispasr_model_mgr.cpp  crispasr_model_mgr.h  crispasr_model_mgr_cli.cpp  crispasr_output.cpp  crispasr_output.h  crispasr_run.cpp  (+8 more)
examples/cohere-align/: main.cpp
examples/cohere-main/: CMakeLists.txt  cohere-main.cpp  cohere-quantize.cpp
examples/crispasr-quantize/: main.cpp
examples/demo/: demo.py  demo.rs
examples/nfa-align/: main.cpp
examples/parakeet-main/: CMakeLists.txt  main.cpp
examples/server/: server.cpp
examples/vibevoice-test-stages/: CMakeLists.txt  main.cpp
examples/voxtral-main/: main.cpp
examples/voxtral-test-llm/: CMakeLists.txt  main.cpp
ggml/: CMakeLists.txt
handover-prompts/: pocket-tts-ggml-graph.md  voxcpm2-numerical-debugging.md
hf-space/: Dockerfile  README.md  start.sh
hf_readmes/: bidirlm-omni-2.5b-GGUF.md  cld3-GGUF.md  cohere-transcribe-03-2026-GGUF.md  distil-large-v3-GGUF.md  fireredpunc-GGUF.md  fullstop-punc-GGUF.md  gemma4-e2b-it-GGUF.md  glm-asr-nano-GGUF.md  granite-speech-4.0-1b-GGUF.md  hubert-large-ls960-ft-GGUF.md  kartoffel-orpheus-3b-german-natural-GGUF.md  kartoffel-orpheus-3b-german-synthetic-GGUF.md  kokoro-82m-GGUF.md  kokoro-de-hui-base-GGUF.md  kokoro-voices-GGUF.md  marblenet-vad-GGUF.md  mimo-asr-GGUF.md  mimo-tokenizer-GGUF.md  moonshine-base-ar-GGUF.md  moonshine-base-ja-GGUF.md  moonshine-base-ko-GGUF.md  moonshine-base-uk-GGUF.md  moonshine-base-vi-GGUF.md  moonshine-base-zh-GGUF.md  moonshine-tiny-ar-GGUF.md  moonshine-tiny-ja-GGUF.md  moonshine-tiny-ko-GGUF.md  moonshine-tiny-uk-GGUF.md  moonshine-tiny-vi-GGUF.md  moonshine-tiny-zh-GGUF.md  omniASR-CTC-1B-v2-GGUF.md  omniasr-ctc-1b-GGUF.md  parakeet-tdt-0.6b-v2-GGUF.md  parakeet-tdt-1.1b-GGUF.md  parakeet-tdt_ctc-1.1b-GGUF.md  parakeet-tdt_ctc-110m-GGUF.md  piper-voices-GGUF.md  qwen3-asr-0.6b-GGUF.md  qwen3-tts-0.6b-customvoice-GGUF.md  qwen3-tts-1.7b-customvoice-GGUF.md  (+4 more)
models/: convert-audioseal-to-gguf.py  convert-canary-to-gguf.py  convert-dac-to-gguf.py  convert-ecapa-tdnn-lid-to-gguf.py  convert-f5-tts-to-gguf.py  convert-firered-asr-to-gguf.py  convert-firered-lid-to-gguf.py  convert-gemma4-e2b-to-gguf.py  convert-granite-nle-to-gguf.py  convert-granite-speech-to-gguf.py  convert-h5-to-coreml.py  convert-h5-to-ggml.py  convert-kyutai-stt-to-gguf.py  convert-mimo-asr-to-gguf.py  convert-moonshine-streaming-to-gguf.py  convert-moonshine-to-gguf.py  convert-omniasr-ctc-to-gguf.py  convert-omniasr-llm-to-gguf.py  convert-paraformer-to-gguf.py  convert-parakeet-to-gguf.py  convert-pt-to-ggml.py  convert-qwen3-asr-to-gguf.py  convert-qwen3-tts-to-gguf.py  convert-silero-lid-to-gguf.py  convert-stt-fastconformer-ctc-to-gguf.py  convert-vibevoice-stream-q4k.py  convert-vibevoice-to-gguf.py  convert-voxtral-to-gguf.py  convert-voxtral4b-to-gguf.py  convert-wav2vec2-to-gguf.py  convert-whisper-vad-onnx-to-gguf.py  convert-zonos-to-gguf.py  download-and-convert-vibevoice.sh  download-coreml-model.sh  download-ggml-model.sh  download-vad-model.sh  granite-speech-kaggle-groundtruth.py  (+4 more)
src/: CMakeLists.txt  align.cpp  align.h  audioseal.cpp  audioseal.h  canary.cpp  canary.h  canary_ctc.cpp  canary_ctc.h  chatterbox_s3gen.cpp  cohere.cpp  cohere.h  cosyvoice3_tts.cpp  crispasr_audio.cpp  crispasr_c_api.cpp  crispasr_dart_helpers.cpp  crispasr_diarize.cpp  crispasr_diarize.h  crispasr_mic.cpp  crispasr_mic.h  crispasr_model_registry.cpp  crispasr_model_registry.h  crispasr_vad.cpp  crispasr_vad.h  ecapa_lid.cpp  fastpitch_tts.cpp  firered_asr.cpp  firered_vad.cpp  fireredpunc.cpp  gemma4_e2b.cpp  gemma4_e2b.h  glm_asr.cpp  glm_asr.h  granite_nle.cpp  granite_speech.cpp  kokoro.cpp  kokoro.h  kugelaudio.cpp  kyutai_stt.cpp  kyutai_stt.h  (+36 more)
src/core/: activation.h  align.h  attention.h  beam_decode.h  bpe.h  conformer_ibm.h  conv.h  ctc.h  ffn.h  fft.h  g2p_de.h  g2p_en.h  gguf_loader.cpp  granite_llm.h  greedy_decode.h  mel.cpp  mel.h  seanet_decoder.h
(+87 files in other folders)
