[package]
name = "crispasr-sys"
version = "0.1.7"
edition = "2021"
description = "Raw FFI bindings to CrispASR (whisper.cpp fork) — links to a pre-installed libcrispasr."
license = "MIT"
repository = "https://github.com/CrispStrobe/CrispASR"
homepage = "https://github.com/CrispStrobe/CrispASR"
documentation = "https://docs.rs/crispasr-sys"
readme = "README.md"
keywords = ["asr", "speech-recognition", "whisper", "ggml", "ffi"]
categories = ["external-ffi-bindings", "multimedia::audio"]
links = "crispasr"

# The crate is a pure FFI shim — only the .rs sources, build.rs, README,
# LICENSE, and Cargo.toml ship to crates.io. The native library is not
# vendored; users install `libcrispasr.{so,dylib,dll}` separately, same
# as whisper.cpp's bindings.
include = ["src/**/*.rs", "build.rs", "Cargo.toml", "README.md", "LICENSE"]

[features]
default = []
# Feature flags are accepted for forward-compat but are no-ops at the
# sys level — the installed `libcrispasr` already includes whichever
# backends it was built with.
cuda = []
metal = []
vulkan = []
